--- a/index.html
+++ b/index.html
@@ -1,90 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-	<meta charset="utf-8">
-	<title>Главная страница</title>
-	<meta name="description" content="Главная страница" />
-	<meta name="keywords" content="" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/styles/styles-core.css" />
-	<link rel="apple-touch-icon" sizes="128x128" type="image/png" href="assets/img/TB@4x.png">
-	<link rel="shortcut icon" type="image/png" href="assets/img/TB.png">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family&#x3D;Ubuntu&amp;subset&#x3D;all&amp;display&#x3D;swap">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family&#x3D;Open+Sans&amp;subset&#x3D;all&amp;display&#x3D;swap"> </head>
-
-<body class="sb-body sb-body_with-footer  font-ubuntu-opensans sb-content-size_m sb-buttons-border_round">
-	<div class="site-wrapper" tabindex="0">
-		<section data-type="main" id="main" class="s-main-type-4 sb-block sb-block_fullscreen s-main-type-4_with-scroll-icon sb-text-white sb-align-center">
-			<link id="main-type-4" rel="stylesheet" href="assets/styles/main-type-4.css" />
-			<div class=" sb-background sb-background sb-background_clear" style="background: linear-gradient(135deg, #f4d03f, #16a085);"></div>
-			<div class="sb-container sb-m-clear-top">
-				<div class="sb-row sb-row_center">
-					<div class="sb-col_xs-12  sb-col_lg-8 sb-col_md-10 sb-col_sm-12 ">
-						<div class="s-main-type-4__content pointer-events-auto sb-m-clear-bottom sb-text-dark">
-							<div class=" sb-background sb-background sb-background_clear" style="background: #ffffff;"></div>
-							<div class="s-main-type-4__inner-content sb-m-clear-bottom">
-								<div class="sb-m-clear-bottom sb-m-6-bottom">
-									<h3 class="sb-font-title sb-font-h3 sb-m-14-bottom"><b> VRussia</b></h3>
-									<div class="sb-font-p2 sb-text-opacity">Встречайте быстрый и рабочий впн в РФ!
-										<div>
-											<div></div>
-										</div>
-									</div>
-								</div>
-								<div class="s-main-type-4__buttons sb-m-19-top-minus"> <a href="https://t.me/+v4QXwuawBrk1NTgy" class="s-main-type-4__button sb-button-primary sb-m-19-top sb-button-scheme-white" style="background-color: #111111">   Купить доступ    </a> <a href="#text" class="s-main-type-4__button sb-button-secondary sb-m-19-top sb-button-type_bordered" style="border-color: rgba(17,17,17,0.16)">   Узнать больше о VPN   </a> </div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			</div>
-		</section>
-		<section data-type="text" id="text" class="s-text-type-4 sb-text-dark sb-padding-top_l sb-padding-bottom_l">
-			<link id="text-type-4" rel="stylesheet" href="assets/styles/text-type-4.css" />
-			<div class=" sb-background" style="background: #FFFFFF;"></div>
-			<div class="sb-container">
-				<div class="sb-row sb-m-clear-bottom">
-					<div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom  sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12 ">
-						<div class="s-text-type-4__wrapper">
-							<div class="s-text-type-4__description sb-font-p2">В России существует тенденция к блокировке VPN-сервисов. В 2022 году Роскомнадзор начал блокировать популярные VPN-протоколы, такие как WireGuard, L2TP и OpenVPN. запрещённым ресурсам в РФ. В ближайшем будущем могут заблокировать большинство обычных VPN.</div>
-						</div>
-					</div>
-					<div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom  sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12 ">
-						<div class="s-text-type-4__wrapper">
-							<div class="s-text-type-4__description sb-font-p2">В преддверии скорой блокировки VPN-сервисов в нашей стране, наша компания представляет уникальный VPN-сервис, который обходит эту проблему с помощью инновационного протокола, устойчивого к блокировкам. Отличительная черта нашего VPN заключается в том, что он не снижает скорость интернет-соединения и почти не влияет на пинг, что является редкостью для подобных сервисов.</div>
-						</div>
-					</div>
-					<div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom  sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12 ">
-						<div class="s-text-type-4__wrapper">
-							<div class="s-text-type-4__description sb-font-p2">Ключевым аспектом нашего VPN-сервиса является высокая скорость соединения, достигающая 1 Гбит/с на клиента! Это обеспечивает быстрый доступ к нужным ресурсам без задержек и перебоев, что особенно важно для бизнеса, онлайн-игр и стриминговых сервисов. </div>
-						</div>
-					</div>
-                    <div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom  sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12 ">
-						<div class="s-text-type-4__wrapper">
-							<div class="s-text-type-4__description sb-font-p2">В преддверии скорой блокировки VPN-сервисов в нашей стране, наша компания представляет уникальный VPN-сервис, который обходит эту проблему с помощью инновационного протокола, устойчивого к блокировкам. Отличительная черта нашего VPN заключается в том, что он не снижает скорость интернет-соединения и почти не влияет на пинг, что является редкостью для подобных сервисов.</div>
-						</div>
-					</div>
-                    <div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom  sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12 ">
-						<div class="s-text-type-4__wrapper">
-							<div class="s-text-type-4__description sb-font-p2"></div>
-						</div>
-					</div>
-                    <div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom  sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12 ">
-						<div class="s-text-type-4__wrapper">
-							<div class="s-text-type-4__description sb-font-p2">В преддверии скорой блокировки VPN-сервисов в нашей стране, наша компания представляет уникальный VPN-сервис, который обходит эту проблему с помощью инновационного протокола, устойчивого к блокировкам. Отличительная черта нашего VPN заключается в том, что он не снижает скорость интернет-соединения и почти не влияет на пинг, что является редкостью для подобных сервисов.</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</div>
-	<template id="popups-stash"> </template>
-	<template id="popups-images-stash"> </template>
-	<link rel="stylesheet" href="assets/styles/size-m.css" />
-	<link rel="stylesheet" href="assets/styles/popups.css" />
-	<link rel="stylesheet" href="assets/styles/styles-helpers.css" />
-
-</html>
+<!DOCTYPE html><html lang="ru"><head><meta charset="utf-8"><title>Главная страница</title><meta name="description" content="Главная страница"><meta name="keywords" content=""><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="assets/styles/styles-core.css"><link rel="apple-touch-icon" sizes="128x128" type="image/png" href="assets/img/TB@4x.png"><link rel="shortcut icon" type="image/png" href="assets/img/TB.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family&#x3D;Ubuntu&amp;subset&#x3D;all&amp;display&#x3D;swap"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family&#x3D;Open+Sans&amp;subset&#x3D;all&amp;display&#x3D;swap"></head><body class="sb-body sb-body_with-footer font-ubuntu-opensans sb-content-size_m sb-buttons-border_round"><div class="site-wrapper" tabindex="0"><section data-type="main" id="main" class="s-main-type-4 sb-block sb-block_fullscreen s-main-type-4_with-scroll-icon sb-text-white sb-align-center"><link id="main-type-4" rel="stylesheet" href="assets/styles/main-type-4.css"><div class="sb-background sb-background sb-background_clear" style="background:linear-gradient(135deg,#f4d03f,#16a085)"></div><div class="sb-container sb-m-clear-top"><div class="sb-row sb-row_center"><div class="sb-col_xs-12 sb-col_lg-8 sb-col_md-10 sb-col_sm-12"><div class="s-main-type-4__content pointer-events-auto sb-m-clear-bottom sb-text-dark"><div class="sb-background sb-background sb-background_clear" style="background:#fff"></div><div class="s-main-type-4__inner-content sb-m-clear-bottom"><div class="sb-m-clear-bottom sb-m-6-bottom"><h3 class="sb-font-title sb-font-h3 sb-m-14-bottom"><b>VRussia</b></h3><div class="sb-font-p2 sb-text-opacity">Встречайте быстрый и рабочий впн в РФ!<div><div></div></div></div></div><div class="s-main-type-4__buttons sb-m-19-top-minus"><a href="https://t.me/+v4QXwuawBrk1NTgy" class="s-main-type-4__button sb-button-primary sb-m-19-top sb-button-scheme-white" style="background-color:#111">Купить доступ</a> <a href="#text" class="s-main-type-4__button sb-button-secondary sb-m-19-top sb-button-type_bordered" style="border-color:rgba(17,17,17,.16)">Узнать больше о VPN</a></div></div></div></div></div></div></section></div><section data-type="text" id="text" class="s-text-type-4 sb-text-dark sb-padding-top_l sb-padding-bottom_l"><link id="text-type-4" rel="stylesheet" href="assets/styles/text-type-4.css"><div class="sb-background" style="background:#FFF"></div><div class="sb-container"><div class="sb-row sb-m-clear-bottom"><div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12"><div class="s-text-type-4__wrapper"><div class="s-text-type-4__description sb-font-p2">В России существует тенденция к блокировке VPN-сервисов. В 2022 году Роскомнадзор начал блокировать популярные VPN-протоколы, такие как WireGuard, L2TP и OpenVPN. запрещённым ресурсам в РФ. В ближайшем будущем могут заблокировать большинство обычных VPN.</div></div></div><div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12"><div class="s-text-type-4__wrapper"><div class="s-text-type-4__description sb-font-p2">В преддверии скорой блокировки VPN-сервисов в нашей стране, наша компания представляет уникальный VPN-сервис, который обходит эту проблему с помощью инновационного протокола, устойчивого к блокировкам. Отличительная черта нашего VPN заключается в том, что он не снижает скорость интернет-соединения и почти не влияет на пинг, что является редкостью для подобных сервисов.</div></div></div><div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12"><div class="s-text-type-4__wrapper"><div class="s-text-type-4__description sb-font-p2">Ключевым аспектом нашего VPN-сервиса является высокая скорость соединения, достигающая 1 Гбит/с на клиента! Это обеспечивает быстрый доступ к нужным ресурсам без задержек и перебоев, что особенно важно для бизнеса, онлайн-игр и стриминговых сервисов.</div></div></div><div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12"><div class="s-text-type-4__wrapper"><div class="s-text-type-4__description sb-font-p2">На данный момент, все сервера нашего VPN расположены в Париже. Это стратегическое решение, направленное на обеспечение максимальной скорости и надежности для наших пользователей. Более того, мы активно работаем над расширением нашей сети серверов. С увеличением числа клиентов, мы планируем добавлять новые локации, что позволит пользователям выбирать оптимальные точки доступа в зависимости от их местоположения.</div></div></div><div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12"><div class="s-text-type-4__wrapper"><div class="s-text-type-4__description sb-font-p2"></div></div></div><div class="s-text-type-4__column s-text-type-4__line sb-m-14-bottom sb-col_lg-4 sb-col_md-4 sb-col_sm-12 sb-col_xs-12"><div class="s-text-type-4__wrapper"><div class="s-text-type-4__description sb-font-p2">Мы стремимся к тому, чтобы наш VPN-сервис был не только функциональным, но и максимально удобным для наших клиентов. Наша цель – предоставить надежное, безопасное и высокоскоростное интернет-соединение, которое будет доступно всем, несмотря на возможные ограничения и блокировки.</div></div></div></div></div></section><template id="popups-stash"></template><template id="popups-images-stash"></template><link rel="stylesheet" href="assets/styles/size-m.css"><link rel="stylesheet" href="assets/styles/popups.css"><link rel="stylesheet" href="assets/styles/styles-helpers.css"></body></html>
