--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="s-main-type-4__buttons sb-m-19-top-minus"> <a href="https://t.me/+v4QXwuawBrk1NTgy" class="s-main-type-4__button sb-button-primary sb-m-19-top sb-button-scheme-white" style="background-color: #111111">   Купить доступ    </a> <a href="#text" class="s-main-type-4__button sb-button-secondary sb-m-19-top sb-button-type_bordered" style="border-color: rgba(17,17,17,0.16)">   Узнать больше о VPN   </a> </div>
+								<div class="s-main-type-4__buttons sb-m-19-top-minus"> <a href="https://t.me/Vrussiasellerbot" class="s-main-type-4__button sb-button-primary sb-m-19-top sb-button-scheme-white" style="background-color: #111111">   Купить доступ    </a> <a href="#text" class="s-main-type-4__button sb-button-secondary sb-m-19-top sb-button-type_bordered" style="border-color: rgba(17,17,17,0.16)">   Узнать больше о VPN   </a> </div>
 							</div>
 						</div>
 					</div>
