--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<link rel="dns-prefetch" href="https://ws.tildacdn.com/">
 	<link rel="dns-prefetch" href="https://static.tildacdn.info/">
 	<meta name="robots" content="nofollow">
-	<link rel="shortcut icon" href="https://github.com/BITIW/VRussia/blob/main/assets/img/TB@4x.png?raw=true" type="image/x-icon">
+	<link rel="shortcut icon" href="https://static.tildacdn.info/img/tildafavicon.ico" type="image/x-icon">
 	<!-- Assets -->
 	<script src="https://neo.tildacdn.com/js/tilda-fallback-1.0.min.js" async="" charset="utf-8"></script>
 	<link rel="stylesheet" href="https://static.tildacdn.info/css/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';">
@@ -963,6 +963,12 @@
 					</div>
 					<div class="t396__elem tn-elem tn-elem__7871714801723994443737" data-elem-id="1723994443737" data-elem-type="text" data-field-top-value="244" data-field-left-value="11" data-field-width-value="306" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="px" data-fields="top,left,width,container,axisx,axisy,widthunits,leftunits,topunits" style="top: 244px; left: 85px; width: 306px;">
 						<div class="tn-atom" field="tn_text_1723994443737" style="line-height: 26px;">Наш VPN-сервис обеспечивает скорость до 1 Гбит/с, позволяя вам пользоваться интернетом без задержек и ограничений. Независимо от того, смотрите ли вы видео в высоком разрешении, играете в онлайн-игры или работаете с большими объемами данных, ваше соединение останется стабильным и быстрым.</div>
+						<div style="margin-top: 500px;margin-left: -1150px; text-align: center;">
+							<a href="https://github.com/BITIW/VRussia/raw/main/assets/styles/oferta_774352978201.docx" target="_blank" style="color: #babaff; text-decoration: underline;">
+								Публичная оферта
+							</a>
+						</div>
+						
 					</div>
 					<div class="t396__elem tn-elem tn-elem__7871714801723994658149" data-elem-id="1723994658149" data-elem-type="text" data-field-top-value="244" data-field-left-value="447" data-field-width-value="306" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="px" data-field-leftunits-value="px" data-field-heightunits-value="" data-field-widthunits-value="px" data-fields="top,left,width,container,axisx,axisy,widthunits,leftunits,topunits" style="top: 244px; left: 521px; width: 306px;">
 						<div class="tn-atom" field="tn_text_1723994658149" style="line-height: 26px;">Мы строго соблюдаем политику конфиденциальности. Ваша анонимность гарантирована с момента подключения к нашим серверам. Мы не сохраняем логи и не отслеживаем вашу активность в сети, что позволяет вам оставаться полностью защищенным и невидимым для третьих лиц и не только для них</div>
